// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="sc-DJmSI ddcjQu"
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
Array [
  <h3
    className="sc-DJmSI ddcjQu"
  >
    Default color is Bulma
  </h3>,
  <h3
    className="sc-DJmSI djSBQX"
    color="piccolo.100"
  >
    Piccolo
  </h3>,
  <h3
    className="sc-DJmSI hGEdbJ"
    color="trunks.100"
  >
    Trunks
  </h3>,
  <h3
    className="sc-DJmSI esbWSL"
    color="krillin.100"
  >
    Krillin
  </h3>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <h3
    className="sc-DJmSI ddcjQu"
  >
    Default font-weight is bold
  </h3>,
  <h3
    className="sc-DJmSI bYLTmT"
  >
    Font-weight is regular
  </h3>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <h3
    className="sc-DJmSI ddcjQu"
  >
    Line-height is pre-calculated
  </h3>,
  <h3
    className="sc-DJmSI gUcrYH"
  >
    Custon line-height
  </h3>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <h3
    className="sc-DJmSI ddcjQu"
  >
    H3 is a default tag
  </h3>,
  <h2
    className="sc-DJmSI ddcjQu"
  >
    H2 tag
  </h2>,
  <h6
    className="sc-DJmSI ddcjQu"
  >
    H6 tag
  </h6>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <h3
    className="sc-DJmSI ddcjQu"
  >
    Default font-size is 16px
  </h3>,
  <h3
    className="sc-DJmSI WvlZd"
    size={24}
  >
    Size is 24px
  </h3>,
  <h3
    className="sc-DJmSI diAxUp"
    size={48}
  >
    Size is 48px
  </h3>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <h3
    className="sc-DJmSI ddcjQu"
  >
    Text-align is not specified
  </h3>,
  <h3
    className="sc-DJmSI dJgsAt"
  >
    Centered Heading
  </h3>,
  <h3
    className="sc-DJmSI jdFgVK"
  >
    Right alignment
  </h3>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <h3
    className="sc-DJmSI ddcjQu"
  >
    Default text-decoration is none
  </h3>,
  <h3
    className="sc-DJmSI eEcsmP"
  >
    Underline Heading
  </h3>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <h3
    className="sc-DJmSI ddcjQu"
  >
    Default text-transform is none
  </h3>,
  <h3
    className="sc-DJmSI hqslxR"
  >
    Uppercase Heading
  </h3>,
]
`;
